--- a/Robust.PongWall/Robust.PongWall.csproj
+++ b/Robust.PongWall/Robust.PongWall.csproj
@@ -6,9 +6,9 @@
     <LangVersion>9</LangVersion>
     <IsPackable>false</IsPackable>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-    <OutputPath>..\bin\Template.Game\</OutputPath> <!-- This is important for gamepack mounting purposes. -->
+    <OutputPath>..\bin\Robust.PongWall\</OutputPath> <!-- This is important for gamepack mounting purposes. -->
     <OutputType Condition="'$(FullRelease)' != 'True'">Exe</OutputType>
-    <RootNamespace>Template.Game</RootNamespace>
+    <RootNamespace>Robust.PongWall</RootNamespace>
   </PropertyGroup>
   <Import Project="..\RobustToolbox\MSBuild\Robust.DefineConstants.targets" />
   <ItemGroup>
